--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-body {
-  font-family: sans-serif;
-}
-
 .container {
   display: grid;
-  height: 100vh;
+  height: 97vh;
   grid-template-columns: 0.3fr 1fr 1fr;
   grid-template-rows: 0.8fr 1.5fr 1fr 0.4fr;
   grid-template-areas:
@@ -23,6 +19,7 @@ body {
 main {
   grid-area: main;
 }
+
 .fixed {
   border: 5px black solid;
   background: rgb(182, 208, 252);
@@ -35,6 +32,7 @@ main {
 }
 
 .side-links {
+  padding-left: 0;
   cursor: pointer;
   color: #551a8b;
   display: flex;
@@ -47,16 +45,26 @@ main {
 
 /* Slideshow*/
 .slideshow-container {
+  /* position: relative; */
   margin: auto;
-  width: 50%;
+  width: 70%;
 }
+
+/* figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
 
 img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   width: 50%;
-  height: auto;
+}
+
+figcaption {
+  text-align: center;
 }
 
 .visible {
@@ -75,7 +83,7 @@ img {
   top: 50%;
   width: auto;
   padding: 16px;
-  margin-top: -22px;
+  /* margin-top: -22px; */
   color: white;
   font-weight: bold;
   font-size: 18px;
